--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>Header</header>
     <h2>Title</h2>
     <p>added inner page</p>
+    <p>added inner page</p>
     <footer>Footer</footer>
 </body>
 </html>
