--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>Header</header>
+    <header>Header olala</header>
     <h2>Title</h2>
     <p>added inner page</p>
     <p>added inner page</p>
